fixed a layout bug

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
-  margin: 0;
+  margin: 0 auto;
   overflow-x: hidden;
+  max-width: 1366px;
 }
 
 * {
@@ -155,7 +156,7 @@ header nav a:hover {
 
 .post-wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, auto));
   gap: 1rem;
 }
 
